<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/nav_fav"
            android:title="@string/favourite"
            android:icon="@drawable/ic_favorite_black_24dp"/>
        <item
            android:id="@+id/nav_hist"
            android:title="@string/order_history"
            android:icon="@drawable/ic_history_black_24dp"/>
        <item
            android:id="@+id/nav_pro"
            android:title="@string/profile"
            android:icon="@drawable/ic_person_black_24dp"/>
        <item
            android:id="@+id/nav_faq"
            android:title="@string/faq_s"
            android:icon="@drawable/ic_question_answer_black_24dp"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"/>

    </group>

</menu>