<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".registration_mail">


    <EditText
        android:id="@+id/reg_mail_name"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/name"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="400dp"
        android:background="@drawable/back_rect"/>
    <EditText
        android:id="@+id/reg_mail_mail"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/e_mail"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="235dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="335dp"
        android:background="@drawable/back_rect"/>
    <EditText
        android:id="@+id/reg_mail_phone"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/phone_no"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="270dp"
        android:background="@drawable/back_rect"/>
    <EditText
        android:id="@+id/reg_mail_loc"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/location"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="365dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="205dp"
        android:background="@drawable/back_rect"/>
    <EditText
        android:id="@+id/reg_mail_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_fingerprint_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="430dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/back_rect"/>
    <Button
        android:id="@+id/reg_mail_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginTop="495dp"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textStyle="bold"
        android:background="@color/black"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/reg_mail_tologin"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="86dp"
        android:text="@string/already_have_an_account_login"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>


    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="155dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="42dp"
        android:visibility="invisible" />


</RelativeLayout>