<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".Registeration">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="174dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="497dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/name"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="270dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/back_rect"/>
    <EditText
        android:id="@+id/reg_mail"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/e_mail"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="335dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="235dp"
        android:background="@drawable/back_rect"/>
    <TextView
        android:id="@+id/reg_phone"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/phone_no"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="170dp"
        android:background="@drawable/back_rect"/>

    <EditText
        android:id="@+id/reg_loc"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/location"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="465dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="105dp"
        android:background="@drawable/back_rect"/>
   <Button
        android:id="@+id/save_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginTop="530dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:text="@string/save"
        android:textStyle="bold"
        android:background="@color/black"
        android:textSize="22sp"/>

</RelativeLayout>