<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".login_mail">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="174dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="487dp"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/log_mail_mail"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/e_mail"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="330dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="240dp"
        android:background="@drawable/back_rect"/>

    <EditText
        android:id="@+id/log_mail_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_fingerprint_black_24dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="395dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="175dp"
        android:background="@drawable/back_rect"/>

    <Button
        android:id="@+id/log_mail_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="100dp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textStyle="bold"
        android:background="@color/black"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/log_mail_toreg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="535dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/new_user_register"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="103dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="55dp"
        android:visibility="invisible" />

</RelativeLayout>