<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="174dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="487dp"
        app:srcCompat="@drawable/logo" />

    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/back_rect"
        android:gravity="center"
        android:padding="10dp" />

    <EditText
        android:id="@+id/log_phone"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/phone_no"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="350dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/back_rect"/>
    <EditText
        android:id="@+id/otp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:hint="@string/enter_otp"
        android:textColor="@color/black"
        android:layout_marginLeft="46dp"
        android:visibility="invisible"
        android:layout_marginTop="415dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="155dp"
        android:background="@drawable/back_rect"/>
    <Button
        android:id="@+id/nxt_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="100dp"
        android:textColor="@color/white"
        android:text="@string/next"
        android:textStyle="bold"
        android:background="@color/black"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/resend"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="535dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/resend_otp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="103dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="55dp"
        android:visibility="invisible" />
</RelativeLayout>