<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/navstyle"
        android:background="@drawable/back_rect2"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/cyan50">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/nav_menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_menu_black_24dp"
                android:layout_centerVertical="true"/>
            <ImageView
                android:id="@+id/fav_menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_favorite_border_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
        
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eatit"
                        android:fontFamily="@font/archivoblack_regular"
                        android:textColor="@color/black"
                        android:layout_centerHorizontal="true"
                        android:textSize="35sp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/app_name"
                        android:background="@color/white"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:elevation="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:textSize="20sp"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_search_black_24dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"/>

                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/non_veg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/back_rect_red"
                            android:layout_margin="10dp"
                            android:elevation="6dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/ic_brightness_1_black_24dp"
                                android:layout_centerInParent="true"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/veg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/back_rect_green"
                            android:layout_margin="10dp"
                            android:elevation="6dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/ic_brightness_1_green_24dp"
                                android:layout_centerInParent="true"/>

                        </RelativeLayout>

                    </LinearLayout>


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/cyan100">

                    <LinearLayout
                        android:id="@+id/card_layout"
                        android:layout_width="170dp"
                        android:layout_height="240dp"
                        android:layout_margin="10dp"
                        android:background="@color/cyan300"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/best_restaurants_at_your_door_step"
                            android:textSize="21sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="40dp"
                            android:layout_marginLeft="10dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text=""/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/best_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:layout_toRightOf="@+id/card_layout"
                        android:background="@color/cyan50"/>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/heading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/currently_available"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>



                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/main_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>




            </LinearLayout>
            
        </ScrollView>




    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>